[package]
name = "whatsappweb-eta"
version = "0.4.0"
authors = ["Christoph Walcher <christoph-wa@gmx.de>", "eta <hi@theta.eu.org>"]
build = "build.rs"
description = "WhatsApp Web (reverse-engineered) API client, eta's fork thereof"
documentation = "https://docs.rs/whatsappweb-eta/"
homepage = "https://git.theta.eu.org/whatsappweb-rs.git/about/"
repository = "https://git.theta.eu.org/whatsappweb-rs.git/"
readme = "README.md"
keywords = ["whatsapp", "whatsappweb"]
categories = ["api-bindings"]
license = "MIT"

[badges]
travis-ci = { repository = "eeeeeta/whatsappweb-rs", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
ws = { version = "0.8", features = ["ssl"] }
log = "0.4"
url = "~2.1"
json = "0.11"
ring = "0.14"
base64 = "0.10"
qrcode = "0.10"
image = { version = "0.21", optional = true }
untrusted = "~0.6"
rust-crypto = "~0.2"
serde = "1.0"
serde_derive = "1.0"
bincode = "~1.1"
byteorder = "~1.3"
protobuf = "~2.7"
chrono = "0.4"
reqwest = { version = "0.8", optional = true }
failure = "0.1"
failure_derive = "0.1"

[dev-dependencies]
simple_logger = "0.5"

[features]
default = []
media = ["reqwest", "image"]

[build-dependencies]
protobuf-codegen-pure = "~2.7"
