[package]
name = "whatsappweb-eta"
version = "0.5.0-pre1"
authors = ["Christoph Walcher <christoph-wa@gmx.de>", "eta <hi@theta.eu.org>"]
build = "build.rs"
description = "WhatsApp Web (reverse-engineered) API client, eta's fork thereof"
documentation = "https://docs.rs/whatsappweb-eta/"
homepage = "https://git.theta.eu.org/whatsappweb-rs.git/about/"
repository = "https://git.theta.eu.org/whatsappweb-rs.git/"
readme = "README.md"
keywords = ["whatsapp", "whatsappweb"]
categories = ["api-bindings"]
license = "MIT"
edition = "2018"

[badges]
travis-ci = { repository = "eeeeeta/whatsappweb-rs", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
tokio-tungstenite = { version = "0.10.1", features = ["tls"] }
futures = "0.3.4"
http = "0.2.1"
tokio = { version = "0.2", features = ["time"] }
tokio-tls = "0.3.0"
log = "0.4"
url = "~1.7"
json = "0.11"
ring = "0.14"
base64 = "0.10"
qrcode = "0.10"
image = { version = "0.22", optional = true }
untrusted = "~0.6"
rust-crypto = "~0.2"
serde = "1.0"
serde_derive = "1.0"
bincode = "~1.1"
byteorder = "~1.3"
protobuf = "~2.8"
chrono = "0.4"
reqwest = { version = "0.10", optional = true }
failure = "0.1"
failure_derive = "0.1"
uuid = { version = "0.7", features = ["v4"] }

[dev-dependencies]
simple_logger = "0.5"

[features]
default = []
media = ["reqwest", "image"]

[build-dependencies]
protobuf-codegen-pure = "~2.8"
